--- a/src/pages/shared/DashboardSidebar/dashboardSideBar.scss
+++ b/src/pages/shared/DashboardSidebar/dashboardSideBar.scss
@@ -1,18 +1,43 @@
 @import "src/styles/--breakpoint";
 
-.seller-sidebar{
+.dashboard-sidebar{
     .sidebar{
-        @include get_down(1100px){
+        @include get_down(1024px){
             transition: all .4s ease;
             left: -100% !important;
             position: fixed;
             left: -100%;
-            z-index: 301;
+            z-index: 2000;
             top: 0px;
         }
     }
 
     .sidebar-mobile_show{
         left: 0 !important;
+
+        &::-webkit-scrollbar {
+            height: 0px;
+            width: 0px;
+        }
+
+        &::-webkit-scrollbar-track {
+            //background: #f1f1f1;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: transparent;
+        }
+    }
+}
+.dashboard-backdrop{
+    @include get_up(1024px){
+        display: none;
+    }
+}
+
+.sidebar-active{
+    @apply bg-primary-500 text-white;
+    img{
+        filter: invert(1);
     }
 }
