--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,100 +1,86 @@
 @import "src/styles/--breakpoint";
 
 
-:root{
+:root {
     --sidebar-width: 300px;
     --sidebar-width-mobile: 250px
 }
 
-.sidebar-root {
+.sidebar {
     z-index: 998;
-    .sidebar-overlay {
-        width: 100%;
-        height: 110%;
-        background: rgba(101, 101, 101, 0.53);
-        position: sticky;
-        left: 0;
-        top: 100px;
-        z-index: 300;
-        display: block;
+
+    --sidebar-width: 260px;
+    max-height: 700px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    min-height: 100vh;
+    position: sticky;
+    top: var(--header-height);
+    width: var(--sidebar-width);
+    min-width: var(--sidebar-width);
+    max-width: var(--sidebar-width);
+    transition: left .3s ease;
+    background: white;
+    left: -260px;
+    overflow-y: auto;
+    max-height: calc(100vh - var(--header-height));
+
+    &::-webkit-scrollbar {
+        height: 1px;
+        width: 3px;
     }
 
-    .sidebar {
-        --sidebar-width: 260px;
-        max-height: 700px;
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        min-height: 100vh;
-        position: sticky;
-        top: var(--header-height);
-        width: var(--sidebar-width);
-        min-width: var(--sidebar-width);
-        max-width: var(--sidebar-width);
-        transition: left .3s ease;
-        background: white;
-        left: -260px;
-        overflow-y: auto;
-        max-height: calc(100vh - var(--header-height));
+    &::-webkit-scrollbar-track {
+        //background: #f1f1f1;
+    }
 
-        &::-webkit-scrollbar {
-            height: 1px;
-            width: 3px;
-        }
-
-        &::-webkit-scrollbar-track {
-            //background: #f1f1f1;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background: #e2e2e2;
-        }
+    &::-webkit-scrollbar-thumb {
+        background: #e2e2e2;
+    }
 
 
-
-        &.sidebar-mobile {
-            transition: all .4s;
-            @include get_down(1024px) {
-                position: fixed;
-                left: -100%;
-                z-index: 3001;
-                width: var(--sidebar-width-mobile);
-                top: 0px;
-            }
-        }
-
-        &.sidebar-mobile_show {
-            left: 0;
-
-        }
-
-        &.sidebar-mobile_hide {
-            left: -100%;
-        }
-
-        .sidebar-fixed-bar{
-            width:  calc(10px + var(--sidebar-width-mobile));
+    &.sidebar-mobile {
+        transition: all .4s;
+        @include get_down(1024px) {
             position: fixed;
-            @apply shadow-xxs;
+            left: -100%;
+            z-index: 3001;
+            width: var(--sidebar-width-mobile);
+            top: 0px;
         }
+    }
+
+    &.sidebar-mobile_show {
+        left: 0;
+
+    }
+
+    &.sidebar-mobile_hide {
+        left: -100%;
+    }
+
+    .sidebar-fixed-bar {
+        width: calc(10px + var(--sidebar-width-mobile));
+        position: fixed;
+        @apply shadow-xxs;
     }
 }
 
-.sidebar-right{
-    //.sidebar {
-    //    &.sidebar-mobile {
-    //        @include get_down(980px) {
-    //            right: -100% !important;
-    //            transition: all .4s ease;
-    //        }
-    //    }
-    //    &.sidebar-mobile_show {
-    //        right: 0 !important;
-    //        left: auto;
-    //    }
-    //
-    //    &.sidebar-mobile_hide {
-    //        right: -100% !important;
-    //    }
-    //}
+.sidebar-right {
+        &.sidebar-mobile {
+            @include get_down(980px) {
+                right: -100% !important;
+                transition: all .4s ease;
+            }
+        }
+        &.sidebar-mobile_show {
+            right: 0 !important;
+            left: auto;
+        }
+
+        &.sidebar-mobile_hide {
+            right: -100% !important;
+        }
+
 }
