--- a/src/App.scss
+++ b/src/App.scss
@@ -348,3 +348,30 @@ table td {
     align-items: center;
     z-index: 1001 !important;
 }
+.sidebar-row{
+    display: flex;
+    /* background: red; */
+    /* justify-content: space-between; */
+    min-height: 100vh;
+    .dashboard_sidebar{
+        background: #9bb6ffbc;
+        flex: 1;
+        min-width: 200px;
+        position: fixed;
+        min-height: 100vh;
+
+        .dashboard_nav{
+
+            display: flex;
+            flex-direction: column
+        }
+
+
+
+    }
+    .dashboard_content{
+        flex: 4;
+        margin-left: 200px;
+    }
+
+}
