seller add product fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -326,9 +326,8 @@ table td {
 }
 
 .route-title{
-    @apply mt-4 md:mt-8 text-xl md:text-3xl font-bold uppercase text-dark-800
+    @apply mt-4 md:mt-8 text-xl md:text-2xl font-bold uppercase text-dark-800 dark:text-dark-30
 }
-
 
 
 .sidebar-row{
