--- a/src/components/UI/Form/switch/style.scss
+++ b/src/components/UI/Form/switch/style.scss
@@ -13,6 +13,14 @@
         display: none;
     }
 
+    &.disabled-sw{
+        pointer-events: none;
+        background: rgba(229, 229, 229, 0.54);
+        &.switch-on {
+            background: rgba(51, 176, 58, 0.3) !important;
+        }
+    }
+
     .thumb{
         width: 16px;
         height: 16px;
