--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -24,6 +24,13 @@
     margin: 10px;
     font-size: 18px;
   }
+    &-sm{
+        box-sizing: border-box;
+        padding: 6px 10px;
+        font-weight: 500;
+        margin: 4px;
+        font-size: 12px;
+    }
 }
 .btn-block{
   box-sizing: border-box !important;
