--- a/src/pages/shared/Shop/style.scss
+++ b/src/pages/shared/Shop/style.scss
@@ -67,18 +67,34 @@
     max-height: 310px;
     height: 310px;
     background: rgba(38, 38, 38, 0.13);
-    overflow: hidden;
+    //overflow: hidden;
     display: block;
-
+    position: relative;
+    .banner-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
     img {
         width: initial;
     }
 
     .shop-logo{
+        position: absolute;
+        bottom: 0;
+        width: 80px;
+        height: 80px;
+        left: 0;
+        transform: translate(50%, 50%);
+        border-radius: 40px;
+        @apply shadow;
 
+        img{
+            object-fit: cover;
+            width: 100%;
+             height: 100%;
+        }
     }
-
-
 }
 
 
