--- a/src/components/categoryNavbar/CategoryNavbar.scss
+++ b/src/components/categoryNavbar/CategoryNavbar.scss
@@ -3,7 +3,7 @@
     position: relative;
     user-select: none;
     z-index: 999;
-    background: white;
+    @apply bg-white dark:bg-neutral-800 shadow-card-deep dark:shadow-md;
     margin-bottom: 10px;
     box-shadow: 0 1px 8px 0 rgb(0 0 0 / 6%);
 
@@ -18,6 +18,7 @@
                 padding: 0 10px;
                 cursor: pointer;
                 letter-spacing: 0.3px;
+                @apply text-dark-400 dark:text-dark-10;
 
                 &:hover {
                     color: var(--primary);
@@ -53,7 +54,8 @@
         //overflow: hidden;
         width: 100%;
         &:nth-child(even) {
-            background: #f8f8f8;
+            //background: #f8f8f8;
+            @apply bg-dark-10 dark:bg-body-dark
         }
 
         &--row {
@@ -69,7 +71,10 @@
                     font-size: 13px;
                     font-weight: 600;
                     text-decoration: none;
-                    color: #2a2929;
+                    @apply text-dark-400 dark:text-dark-10;
+                    &:hover {
+                        @apply text-primary-600
+                    }
                 }
 
                 .collapse-icon {
@@ -87,13 +92,11 @@
                     font-weight: 400;
                     margin: 2px 0px;
                     font-size: 13px;
-                    color: rgba(31, 31, 31, 0.72);
-                    //color: #4c4c4c;
+                    @apply text-dark-400 dark:text-dark-100;
                     cursor: pointer;
 
                     &:hover {
-                        color: var(--color-primary);
-                        //font-weight: 400;
+                        @apply text-primary-600
                     }
                 }
             }
