--- a/src/pages/publicSite/productDetails/productDetails.scss
+++ b/src/pages/publicSite/productDetails/productDetails.scss
@@ -243,8 +243,8 @@
   .user_rate-wrapper {
     position: relative;
     background: #ececec;
-    width: 100px;
-    height: 5px;
+    width: 100%;
+    height: 10px;
     border-radius: 3px;
     display: inline-block;
     .user_rate{
@@ -252,7 +252,7 @@
       top: 0;
       left: 0;
       width: 20%;
-      height: 5px;
+      height: 10px;
       background: var(--color-primary);
       border-radius: 3px;
     }
