--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -84,7 +84,7 @@ body{
 .product_image_div{
   min-width: 10px;
   min-height: 10px;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
 }
 
