--- a/src/components/Navigation/mobileCartSidebar.scss
+++ b/src/components/Navigation/mobileCartSidebar.scss
@@ -1,10 +1,26 @@
 @import "src/styles/--breakpoint";
 
+
+.backdrop-overlay{
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 110%;
+    transform: translateX(-100%);
+    transition: all .5s ease-in-out;
+    background: #00000087
+}
+
+.backdrop-overlay-open{
+    transform: translateX(0);
+}
+
 .mobile-cart-sidebar-backdrop{
     @include get_up(1024px) {
         display: none;
     }
-    z-index: 1000;
+    z-index: 1001;
 }
 .mobile-cart-sidebar {
     @include get_up(1024px) {
