--- a/src/components/categoryNavbar/CategoryNavbar.scss
+++ b/src/components/categoryNavbar/CategoryNavbar.scss
@@ -1,4 +1,4 @@
-
+@import "src/styles/--breakpoint";
 .category_navigation {
     position: relative;
     user-select: none;
@@ -39,6 +39,11 @@
     justify-content: space-between;
     background: white;
     display: flex;
+
+    @include get_down(500px){
+        max-height: calc(100vh - 40vh);
+        overflow-y: auto;
+    }
 }
 
 .category_submenu {
