--- a/src/pages/main/homePage/HomeCategoryNav/style.scss
+++ b/src/pages/main/homePage/HomeCategoryNav/style.scss
@@ -1,5 +1,25 @@
 
-.category-dropdown{
+.home-category-list {
+    @apply bg-white py-4 dark:bg-neutral-800 dark:text-white ;
+
+    .home-category-list-item {
+
+        .home-category-list-item-content {
+            width: 50px;
+            height: 50px;
+            padding: 4px;
+            border: none;
+            background: rgba(233, 234, 238, 0.56);
+
+            .home-category-list-item-img {
+
+            }
+        }
+    }
+}
+
+
+.category-dropdown {
     @apply absolute shadow-2xl rounded-lg flex-col md:flex-row bg-white dark:bg-neutral-800 ;
     padding: 20px 10px;
     top: 100%;
@@ -7,11 +27,13 @@
     justify-content: space-between;
     display: flex;
 
-    &__submenu-panel{
+    &__submenu-panel {
         position: relative;
-        &__right{
+
+        &__right {
             padding: 0 30px;
-            h4{
+
+            h4 {
                 @apply hover:bg-green-500/10 hover:text-green-450 rounded;
                 white-space: nowrap;
                 cursor: pointer;
@@ -19,12 +41,14 @@
             }
         }
 
-        .category-sub-item{
+        .category-sub-item {
             @apply p-2 rounded
         }
-        .active-category-sub-item{
+
+        .active-category-sub-item {
             @apply bg-green-500/10 text-green-450;
-            h4{
+
+            h4 {
                 @apply font-semibold
             }
         }
