--- a/src/pages/main/homePage/HomePage.scss
+++ b/src/pages/main/homePage/HomePage.scss
@@ -2,238 +2,445 @@
 @import "../../../styles/--shadow";
 @import "../../../styles/--breakpoint";
 
-.image_cover{
+.image_cover {
     width: 100%;
     // height: 400px;
     // background: red 
-    img{
+    img {
         display: flex;
         object-fit: cover;
         width: 100%;
         height: 400px;
+        border-radius: 10px;
     }
 }
 
 
-.homepage_slider{
-   @include get_down(600px){
-       img{
-           min-height: 250px;
-           object-fit: cover;
-       }
-   }
+.homepage_slider {
+    @include get_down(600px) {
+        img {
+            min-height: 250px;
+            object-fit: cover;
+        }
+    }
+
+    .slider_item{
+        //background: red;
+        margin: 0 10px;
+        img{
+            border-radius: 9px;
+        }
+    }
+
+    .image-overlay{
+        border-radius: 9px;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: #00000061;
+    }
 
 }
 
 
-.product-detail-link{
-  text-decoration: none;
-  display: block;
+.product-detail-link {
+    text-decoration: none;
+    display: block;
 }
-.homepage{
 
-  .home_page_product_nav{
+.homepage {
+
+    .home_page_product_nav {
+        background: var(--color-white-bg);
+        box-shadow: 0 0 4px 2px #08080857;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+
+        .home_page_product_nav--container {
+            width: 1200px;
+            max-width: 1200px;
+            display: flex;
+            align-items: baseline;
+            justify-content: space-between;
+
+
+            .home_page_product_nav--item {
+                text-align: center;
+                cursor: pointer;
+                margin: 10px;
+                position: relative;
+
+                &:hover {
+                    .item_name {
+                        color: var(--color-brand-bbd) !important;
+                        transition: color .4s ease;
+                    }
+
+                    .item_link {
+                        color: var(--color-brand-bbd) !important;
+                        transition: color .4s ease;
+                    }
+                }
+            ;
+
+                .item_name {
+                    font-weight: 500;
+                    font-family: Roboto, serif;
+                    font-size: 14px;
+                    color: $dark-A400;
+
+                    &:hover {
+                        color: var(--color-brand-bbd) !important;
+                        transition: color .4s ease;
+                    }
+
+                    .item_link {
+                        text-decoration: none;
+                        font-size: 14px;
+                        color: $dark-A400;
+                    }
+                }
+
+                .nav-logo {
+                    max-width: 60px;
+                    margin: auto;
+
+                    img {
+                        width: 100%
+                    }
+                }
+
+                .item_name {
+                    white-space: nowrap;
+                    font-size: 13px;
+                }
+            }
+
+        }
+    }
+
+    .homepage-carousel {
+        margin-top: 10px;
+    }
+}
+
+.cat_parent {
     background: var(--color-white-bg);
     box-shadow: 0 0 4px 2px #08080857;
     padding-bottom: 10px;
     margin-bottom: 10px;
+}
+
+.cat_item {
+
+    img {
+        width: 70px;
+    }
+
+    @include get_down(500px) {
+
+        &:nth-child(1), &:nth-child(4), &:nth-child(9) {
+            display: none;
+        }
+
+        img {
+            width: 40px;
+        }
+    }
+
+
+}
+
+.dropdown_panel {
+    position: absolute;
+    //bottom: 0;
+    background: white;
+    box-shadow: 0px 2px 15px 0px #9090908c;
+    z-index: 100;
+    min-width: 200px;
     display: flex;
-    justify-content: center;
-      .home_page_product_nav--container{
-        width: 1200px;
-        max-width: 1200px;
+    overflow: hidden;
+
+    .dropdown_panel--sub_menu_center_div {
+        //box-shadow: 0px 0px 9px 2px #464646
+        position: relative;
+        width: 20px;
+
+        .top_arrow {
+            //position: absolute;
+            //top: 0;
+            //width: 20px;
+            //height: 20px;
+            //background: #6e8aff;
+            //display: block;
+        }
+    }
+
+    .dropdown_panel--sub_menu {
         display: flex;
-        align-items: baseline;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: start;
+        box-sizing: border-box;
+        padding-right: 0px;
+        padding-top: 5px;
+        padding-left: 5px;
+        min-width: 250px;
 
+        .dropdown_panel--item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 14px;
+            padding: 5px 5px;
+            margin: 2px 0px;
+            width: 100%;
+            box-sizing: border-box;
+            text-align: start;
+            color: #383838;
+            font-weight: 400;
+            padding-right: 20px;
 
+            a {
+                white-space: nowrap;
+                padding-right: 20px;
+                padding-left: 10px;
+            }
 
-          .home_page_product_nav--item{
-            text-align: center;
-            cursor: pointer;
-            margin: 10px;
-            position: relative;
-            &:hover{
-              .item_name{
-                  color: var(--color-brand-bbd) !important;
-                  transition: color .4s ease;
+            i {
+                font-size: 10px;
+                opacity: 0;
+            }
+
+            &:hover {
+                background: #f3f3f3;
+                color: var(--color-primary);
+
+                i {
+                    opacity: 1;
                 }
-              .item_link{
-                color: var(--color-brand-bbd) !important;
-                transition: color .4s ease;
-              }
-            };
-            .item_name{
-              font-weight: 500;
-              font-family: Roboto, serif;
-              font-size: 14px;
-              color: $dark-A400;
-              &:hover{
-                color: var(--color-brand-bbd) !important;
-                transition: color .4s ease;
-              }
-              .item_link{
-                text-decoration: none;
-                font-size: 14px;
-                color: $dark-A400;
-              }
             }
-            .nav-logo{
-              max-width: 60px;
-              margin: auto;
-              img{width: 100%}
-            }
-            .item_name{
-              white-space: nowrap;
-              font-size: 13px;
-            }
-          }
 
-      }
+            &--active {
+                background: #f3f3f3;
+                color: var(--color-primary);
+
+                i {
+                    opacity: 1;
+                }
+            }
+        }
+
+    }
+
+    .dropdown_panel--left {
+        box-shadow: inset -8px 0px 13px 0px #9e9e9e;
+        margin: -21px -6px;
+        padding-left: 14px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        padding-right: 15px;
+    }
+
+    .dropdown_panel--more {
+        box-shadow: inset 4px -1px 15px 0px #ababab;
+        margin: -21px -14px;
+        padding-left: 22px;
+        padding-top: 19px;
+        padding-bottom: 25px;
+
+        .dropdown_panel--item {
+            display: flex;
+            justify-content: space-between;
+            font-size: 14px;
+            padding: 5px 5px;
+            margin: 0px 0px;
+            width: 100%;
+            box-sizing: border-box;
+            text-align: start;
+            //&:nth-child(1){
+            //  margin-left: -10px;
+            //  margin-top: 10px;
+            //  font-weight: 400;
+            //  font-size: 14px;
+            //  color: #868686;
+            //  &:hover{
+            //    background: transparent;
+            //  }
+            //}
+            a {
+                padding-right: 10px;
+                padding-left: 0px;
+            }
+        }
+
+        .dropdown_panel--sub_menu--header {
+            white-space: nowrap;
+            font-weight: 400;
+            font-size: 14px;
+            color: #6c6c6c;
+            margin-top: 8px;
+            margin-left: -5px;
+            padding: 5px 20px 5px 0px;
+
+
+        }
     }
 }
 
-.cat_parent{
-  background: var(--color-white-bg);
-  box-shadow: 0 0 4px 2px #08080857;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
+
+.day-deals{
+    .products-list{
+        display: flex;
+        flex-direction: column;
+        row-gap: 14px;
+    }
 }
 
-.cat_item{
-
-  img{
-    width: 70px;
-  }
-
-  @include get_down(500px){
-
-    &:nth-child(1),&:nth-child(4),&:nth-child(9){
-      display: none;
-    }
-
-    img{
-      width: 40px;
-    }
-  }
-
-
-}
-
-.dropdown_panel{
-  position: absolute;
-  //bottom: 0;
-  background: white;
-  box-shadow: 0px 2px 15px 0px #9090908c;
-  z-index: 100;
-  min-width: 200px;
-  display: flex;
-  overflow: hidden;
-  .dropdown_panel--sub_menu_center_div{
-    //box-shadow: 0px 0px 9px 2px #464646
-    position: relative;
-    width: 20px;
-    .top_arrow{
-      //position: absolute;
-      //top: 0;
-      //width: 20px;
-      //height: 20px;
-      //background: #6e8aff;
-      //display: block;
-    }
-  }
-  .dropdown_panel--sub_menu{
+.product-list-view{
     display: flex;
-    flex-direction: column;
-    align-items: start;
-    box-sizing: border-box;
-    padding-right: 0px;
-    padding-top: 5px;
-    padding-left: 5px;
-    min-width: 250px;
-    .dropdown_panel--item{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      font-size: 14px;
-      padding: 5px 5px;
-      margin: 2px 0px;
-      width: 100%;
-      box-sizing: border-box;
-      text-align: start;
-      color: #383838;
-      font-weight: 400;
-      padding-right: 20px;
-      a{
-        white-space: nowrap;
-        padding-right: 20px;
-        padding-left: 10px;
-      }
-      i{
-        font-size: 10px;
-        opacity: 0;
-      }
-      &:hover{
-        background: #f3f3f3;
-        color: var(--color-primary);
-        i{opacity: 1;}
-      }
-      &--active{
-        background: #f3f3f3;
-        color: var(--color-primary);
-        i{opacity: 1;}
-      }
+    align-items: center;
+    background: #f1f2f6;
+    border-radius: 8px;
+    padding: 10px;
+    overflow: hidden;
+    position: relative;
+    @apply dark:bg-neutral-800;
+
+    &.product-card{
+        flex-direction: column;
+        padding: 0;
+        border-radius: 0;
+        background: transparent;
+        align-items: start;
+        .img-root{
+            width: 100%;
+            height: 160px;
+        }
+
+        .product-meta{
+            padding: 10px 3px;
+        }
     }
-    
-  }
-  .dropdown_panel--left{
-    box-shadow: inset -8px 0px 13px 0px #9e9e9e;
-    margin: -21px -6px;
-    padding-left: 14px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-right: 15px;
-  }
-  .dropdown_panel--more{
-    box-shadow: inset 4px -1px 15px 0px #ababab;
-    margin: -21px -14px;
-    padding-left: 22px;
-    padding-top: 19px;
-    padding-bottom: 25px;
-    .dropdown_panel--item{
-      display: flex;
-      justify-content: space-between;
-      font-size: 14px;
-      padding: 5px 5px;
-      margin: 0px 0px;
-      width: 100%;
-      box-sizing: border-box;
-      text-align: start;
-      //&:nth-child(1){
-      //  margin-left: -10px;
-      //  margin-top: 10px;
-      //  font-weight: 400;
-      //  font-size: 14px;
-      //  color: #868686;
-      //  &:hover{
-      //    background: transparent;
-      //  }
-      //}
-      a{
-        padding-right: 10px;
-        padding-left: 0px;
-      }
+
+    .fav-icon{
+        width: 26px;
+        height: 26px;
+        border-radius: 26px;
+        background: white;
+        @apply dark:bg-neutral-900 dark:text-dark-100;
+        box-shadow: 0 2px 10px -2px rgba(72, 72, 72, 0.14);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        font-size: 16px;
     }
-    .dropdown_panel--sub_menu--header{
-      white-space: nowrap;
-      font-weight: 400;
-      font-size: 14px;
-      color: #6c6c6c;
-      margin-top: 8px;
-      margin-left: -5px;
-      padding: 5px 20px 5px 0px;
-      
-      
+
+    .img-root{
+        width: 90px;
+        height: 90px;
+        img{
+            display: flex;
+            object-fit: cover;
+            height: 100%;
+            object-position: top;
+            width: 100%;
+        }
     }
-  }
+
+    .product-meta{
+        margin-left: 10px;
+        .p-title{
+            font-size: 14px;
+            font-weight: 500;
+            @apply text-dark-800 dark:text-dark-10
+        }
+        .p-seller{
+            font-size: 12px;
+            font-weight: 400;
+            @apply text-dark-300 dark:text-dark-200
+        }
+        .p-price-row{
+            display: flex;
+            margin-top: 4px;
+            align-items: center;
+            column-gap: 10px;
+            font-size: 14px;
+            .p-price{
+                font-weight: 500;
+                @apply text-neutral-800 dark:text-dark-10
+            }
+            .p-discount{
+                font-weight: 500;
+                @apply text-red-500
+            }
+        }
+    }
+
+
+}
+
+.products-grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+
+}
+
+.offer-remain-time{
+
+    .brand-item{
+        height: 45px;
+        background: #e9ebf1;
+        padding: 10px;
+        border-radius: 6px;
+        img{
+            width: 100%;
+        }
+    }
+
+}
+
+.slider-products-section{
+
+}
+
+.bottom-nav{
+    height: 50px;
+    background: #ffffff;
+    user-select: none;
+    z-index: 1000;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    padding: 10px 20px;
+
+    .nav-items{
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+
+        .h-nav-item{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 20px;
+            color: #7a7a7a;
+            label{
+                text-align: center;
+                font-size: 12px;
+                font-weight: 500;
+                text-transform: uppercase;
+                @apply text-dark-900
+            }
+        }
+    }
 }
