re-design mobile cart page

--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -48,7 +48,7 @@
 }
 
 .btn-primary {
-    @apply bg-green-500 hover:bg-green-600 btn-shadow-dark;
+    @apply bg-primary-400 hover:bg-primary-500 btn-shadow-dark;
     color: white;
     &:hover {
         box-shadow: 0 2px 5px 0px grey;
