--- a/src/pages/main/auth/style.scss
+++ b/src/pages/main/auth/style.scss
@@ -1,42 +1,42 @@
-
 @import "../../../styles/--breakpoint";
 
-.auth-card-container{
-  @apply max-w-md mx-auto my-2 mb-20 md:my-24;
-  @include get_down(500px){
-    //width: 400px;
-    padding: 0;
-    //height: auto;
-  }
+.auth-card-container {
+    @apply max-w-md  mx-auto my-0 sm:my-2 mb-20 md:my-24;
+    @include get_down(500px) {
+        //width: 400px;
+        padding: 0;
+        //height: auto;
+    }
 }
 
-.auth-card{
-  @apply shadow-card-deep dark:shadow-card-deep-dark mx-auto bg-white dark:bg-neutral-800 p-5 rounded-2xl ;
-  //width: 100%;
-  //max-width: 420px;
-  @include get_down(500px){
-      @apply shadow-none;
-      background: transparent;
-    max-width: 100%;
-    height: 100%;
-    position: static!important;
-    left: 0;
-    top: 0;
+.auth-card {
+    @apply shadow-card-deep dark:shadow-card-deep-dark mx-auto rounded-2xl ;
+    //width: 100%;
+    //max-width: 420px;
+    @include get_down(500px) {
+        @apply shadow-none rounded-none pb-10 bg-transparent;
+        background: transparent;
+        max-width: 100%;
+        height: 100%;
+        position: static !important;
+        left: 0;
+        top: 0;
+        box-shadow: none !important;
 
-    transform: translate(0);
-    margin: 0;
-    //@apply shadow-none
-  }
+        transform: translate(0);
+        margin: 0;
+        //@apply shadow-none
+    }
 }
 
-.card-title{
+.card-title {
     @apply text-green-450  text-2xl font-bold text-center;
 }
 
-.card-info{
-  @apply py-4 text-center text-neutral-400
+.card-info {
+    @apply py-4 text-center text-neutral-400
 }
 
-.input-group{
-  @apply bg-neutral-200/50 dark:bg-neutral-900/50 text-neutral-800  dark:text-neutral-300 placeholder:text-neutral-800  dark:placeholder:text-neutral-400  rounded-lg border border-transparent focus:border focus:border-green-400 py-3 px-4;
+.input-group {
+    @apply bg-neutral-200/50 dark:bg-neutral-900/50 text-neutral-800  dark:text-neutral-300 placeholder:text-neutral-800  dark:placeholder:text-neutral-400  rounded-lg border border-transparent focus:border focus:border-green-400 py-3 px-4;
 }
