--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -19,7 +19,7 @@ body {
     z-index: 1000;
 
     .top-navigation{
-        @apply bg-white dark:bg-neutral-800 py-1 hidden lg:block;
+        @apply bg-white dark:bg-neutral-900 py-1 hidden lg:block;
     }
 
     .top_navigation {
@@ -56,7 +56,7 @@ body {
 
     .main-nav {
 
-        @apply bg-white dark:bg-dark-600;
+        @apply bg-white dark:bg-dark-800;
 
         .main-nav--container {
             display: flex;
@@ -86,13 +86,12 @@ body {
 
                 i {
                     padding: 0 5px;
-
                 }
             }
         }
 
         .nav-text{
-            @apply text-neutral-700;
+            @apply dark:text-dark-10 text-neutral-700;
         }
     }
 
