update seller product list page, added featutes product from seller dashboard, top discount products

--- a/src/App.scss
+++ b/src/App.scss
@@ -68,11 +68,11 @@ body {
     background: #d34a4a;
 }
 
-.dark .card {
-    background: #2a2a2a;
-    box-shadow: 0px 9px 14px 9px rgba(42, 42, 42, 0.3), -1px 1px 18px -15px rgba(52, 52, 52, 0.45), 0 14px 20px 0px rgba(35, 35, 35, 0.81);
-    color: white;
-}
+//.dark .card {
+//    background: #2a2a2a;
+//    box-shadow: 0px 9px 14px 9px rgba(42, 42, 42, 0.3), -1px 1px 18px -15px rgba(52, 52, 52, 0.45), 0 14px 20px 0px rgba(35, 35, 35, 0.81);
+//    color: white;
+//}
 
 .bg-body {
     //@apply bg-white dark:bg-neutral-800 shadow-card-deep dark:shadow-md
