--- a/src/components/CartProduct/cartProduct.scss
+++ b/src/components/CartProduct/cartProduct.scss
@@ -1,11 +1,5 @@
 
-@mixin dark(){
-    @at-root {
-        .dark{
-            @content()
-        }
-    }
-}
+@import "src/styles/--mixin";
 
 .cart-product-item {
 
