--- a/src/components/categoryNavbar/CategoryNavbar.scss
+++ b/src/components/categoryNavbar/CategoryNavbar.scss
@@ -2,8 +2,9 @@
 .category_navigation {
     position: relative;
     user-select: none;
-    z-index: 999;
-    @apply bg-white dark:bg-neutral-800 shadow-card-deep dark:shadow-md;
+    //z-index: 999;
+    //@apply bg-white dark:bg-neutral-800 shadow-card-deep dark:shadow-md;
+    @apply bg-primary-400 dark:bg-neutral-800 shadow-card-deep dark:shadow-md;
     margin-bottom: 10px;
     box-shadow: 0 1px 8px 0 rgb(0 0 0 / 6%);
 
@@ -18,7 +19,8 @@
                 padding: 0 10px;
                 cursor: pointer;
                 letter-spacing: 0.3px;
-                @apply text-dark-400 dark:text-dark-10;
+                //@apply text-dark-400 dark:text-dark-10;
+                @apply text-dark-10 dark:text-dark-10;
 
                 &:hover {
                     color: var(--primary);
