--- a/src/pages/main/homePage/HomeCategoryNav/style.scss
+++ b/src/pages/main/homePage/HomeCategoryNav/style.scss
@@ -1,19 +1,71 @@
+@import "src/styles/--breakpoint";
+@import "src/styles/--mixin";
+
 
 .home-category-list {
     @apply bg-white py-4 dark:bg-neutral-800 dark:text-white ;
 
+    padding-left: 20px;
+    padding-right: 20px;
+
+    @include get_down(768px){
+
+    }
+
+    @include get_down(576px){
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
     .home-category-list-item {
 
         .home-category-list-item-content {
-            width: 50px;
-            height: 50px;
+            width: 90px;
+            //height: 90px; // on desktop devices
             padding: 4px;
             border: none;
-            background: rgba(233, 234, 238, 0.56);
+            background: rgba(255, 255, 255, 0);
+
+            h4{
+                white-space: nowrap;
+                margin-top: 5px;
+                @include get_down(768px){
+                    margin-top: 0px;
+                }
+            }
+
+
+            @include get_down(1208px){
+                width: 100%;
+                //height: 100%;
+                img{
+                    max-inline-size: 100%;
+                    block-size: auto;
+                    aspect-ratio: 1/1;
+                    object-fit: cover;
+                    //object-position: top center;
+                }
+            }
+
+            @include get_down(1111px){
+                h4{
+                    display: none;
+                }
+            }
+            @include get_down(768px){
+                width: 50px;
+                height: 50px;
+                padding: 4px;
+                border: none;
+                background: rgba(233, 234, 238, 0.56);
+            }
+
 
             .home-category-list-item-img {
 
             }
+
+
         }
     }
 }
