--- a/src/components/Pagination/style.scss
+++ b/src/components/Pagination/style.scss
@@ -1,13 +1,6 @@
 
 .paginate-item{
-    @apply w-10 h-10 hover:bg-primary-500
-    cursor-pointer transition
-    transition-colors hover:text-white
-    bg-primary-500/10
-    font-semibold text-primary-500
-    text-sm rounded-full
-    flex justify-center
-    items-center select-none;
+
 }
 
 .paginate-item svg{
@@ -15,5 +8,5 @@
 }
 
 .paginate-active{
-    @apply bg-primary-500 font-semibold text-white
+    //@apply bg-primary-500 font-semibold text-white
 }
