--- a/src/components/UI/Form/Card/card.scss
+++ b/src/components/UI/Form/Card/card.scss
@@ -6,12 +6,30 @@
     //background: white;
     border-radius: 10px;
     padding: 1rem;
-    margin: 1rem 0;
-    box-shadow: 0 5px 12px -2px #0c0c0c40;
+    //margin: 1rem 0;
+    //box-shadow: 0 5px 12px -2px #0c0c0c40;
 
 
     .card-title{
         @apply  text-neutral-800 font-semibold text-xl
 
     }
+
 }
+
+.dashboard-card{
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
+    width: 100%;
+    border-radius: 0.4rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / .1), 0 1px 2px -1px rgb(0 0 0 / .1);
+    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
+    transition-property: all;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-duration: .3s;
+}
+
+
