--- a/src/components/UI/Form/multiSelect/styles.scss
+++ b/src/components/UI/Form/multiSelect/styles.scss
@@ -1,8 +1,35 @@
-.option-list{
+.option-list {
     max-height: 200px;
     min-height: 200px;
     background-color: white;
-    overflow-y: auto;
-    box-shadow: 0 6px 9px -1px #6a6a6a;
+    overflow-y: scroll;
+    box-shadow: 0px 8px 11px 0px #7474744f;
     z-index: 100;
+    border: 1px solid #d9d9d9;
+    border-radius: 7px;
+    /* top: -40px; */
+    position: absolute;
+    top: 33px;
+    padding: 10px 10px;
+    left: 0;
+    &::-webkit-scrollbar{
+        width: 3px;
+        background: transparent;
+    }
+    &::-webkit-scrollbar-track{
+        background: transparent;
+    }
+    &::-webkit-scrollbar-thumb{
+        background: #d5d5d5
+    }
+
+    .close-icon-btn{
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+            position: absolute;
+        right: 0;
+        top: 4px;
+    }
 }
+
