--- a/src/components/UI/Pagination/Pagination.scss
+++ b/src/components/UI/Pagination/Pagination.scss
@@ -1,19 +1,28 @@
-.pagination{
-  display: flex; 
-  align-items: center;
-  justify-content: center;
-  .pagination_item{
-    min-width: 30px;
-    min-height: 30px; 
-    text-align: center; 
-    line-height: 30px;
-    background: #e3e3e3;
-    color: #242424;
-    margin: 5px; 
-    cursor: pointer;
-  }
-  .active_item{
-    color: white;
-    background: #8383f8;
-  }
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .pagination_item {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        //background: #e3e3e3;
+        //color: #242424;
+        margin: 5px;
+        cursor: pointer;
+
+        transition: background-color .4s ease, color .4s ease;
+        &:hover{
+            background: var(--primary-400);
+            color: white;
+        }
+    }
+
+    .active_item {
+        color: white;
+        background: var(--primary-400);
+    }
 }
