--- a/src/pages/shared/DashboardSidebar/dashboardSideBar.scss
+++ b/src/pages/shared/DashboardSidebar/dashboardSideBar.scss
@@ -2,6 +2,12 @@
 
 
 .dashboard-sidebar {
+
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.1) 0px 4px 6px -4px;
+
     @include get_down(1024px) {
         transition: all .4s ease;
         left: -100% !important;
@@ -10,6 +16,8 @@
         z-index: 2000;
         top: 0px;
     }
+
+    --sidebar-width: 288px;
 
 
     .sidebar-mobile_show {
