update seller product verification by admin

--- a/src/App.scss
+++ b/src/App.scss
@@ -391,7 +391,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .dashboard-content{
-    padding: 24px;
+    @apply px-2 lg:px-6;
 }
 
 
