Re-rewrite add category

--- a/client/src/pages/shared/Shop/style.scss
+++ b/client/src/pages/shared/Shop/style.scss
@@ -13,7 +13,7 @@
 //.top_brands_wrapper{
 //  margin: 10px 0px;
 //  position: relative;
-//  .top-brands{
+//  .top-brand{
 //    background: white;
 //    display: flex;
 //    height: 120px;
